--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -7,10 +7,8 @@
 <view><text class="lizihao">专业：计算机科学与技术</text></view>
 <view><text class="lizihao">邮箱：924206246@qq.com</text></view>
 <view><text class="lizihao">兴趣爱好：游戏 音乐 电影</text></view>
-<view class="page">
-  <view class="page__bd">
-    <view class="section section_gap">
-    <audio src="{{current.src}}" poster="{{current.poster}}" name="{{current.name}}" author="{{current.author}}" action="{{audioAction}}" bindplay="audioPlayed" bindtimeupdate="audioTimeUpdated" controls></audio>
-    </view>
-  </view>
+<view class="jx_card">
+<view bindtap='audioPlay' class='jx_logo'>
+<image  style="width: 150px; height: 120px"src='../sources/bk.jpg'></image>
+</view>
 </view>
